# Daily_task

./: .gitignore  CMakeLists.txt
AndGate/tests/: AndGAte_test.cpp
ClockGenerator_SC_THREAD/inc/: ClockGenerator.h  Monitor.h
ClockGenerator_SC_THREAD/src/: ClockGenerator.cpp
ClockGenerator_SC_THREAD/tests/: ClockGenerator_test.cpp
DFlipFlop/inc/: DFlipFlop.h
DFlipFlop/src/: DFlipFlop.cpp
DFlipFlop/tests/: DFlipFlop_test.cpp
NandGate/inc/: NandGate.h
NandGate/src/: NandGate.cpp
NandGate/tests/: NandGate_test.cpp
NorGate/inc/: NorGate.h  NotGate.h
NorGate/src/: NorGate.cpp
NorGate/tests/: NorGate_test.cpp
NotGate/tests/: NotGate_test.cpp
OrGate/inc/: OrGate.h
OrGate/tests/: OrGate_test.cpp
ProducerConsumer/inc/: consumer.h  fifo_channel.h  fifo_if.h  producer.h
ProducerConsumer/src/: consumer.cpp  fifo_channel.cpp  producer.cpp
ProducerConsumer/tests/: test_producerConsumer.cpp
SimpleAdder/inc/: Adder.h  AndGate.h  XorGate.h
SimpleAdder/src/: Adder.cpp
SimpleAdder/tests/: Adder_test.cpp
Timer_SC_THREAD/inc/: Monitor.h  Timer.h
Timer_SC_THREAD/src/: Timer.cpp
Timer_SC_THREAD/tests/: Timer_test.cpp
XnorGate/: CMakeLists.txt
XnorGate/inc/: AndGate.h  NotGate.h  XnorGate.h
XnorGate/src/: NotGate.cpp  XnorGate.cpp
XnorGate/tests/: XnorGate_test.cpp
XorGate/inc/: XorGate.h
XorGate/src/: AndGate.cpp  OrGate.cpp  XorGate.cpp
XorGate/tests/: XorGate_test.cpp
